@@ -1,3 +1,8 @@
+2006-02-04  Brent Smith  <gnome@nextreality.net>
+
+	* src/yelp-window.c: (pager_page_cb):
+	Fixed a bug with malformed documents which caused a crash.
+
 2006-02-02  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-main.c: (main_start):
